// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots crd/CustomResourceDefinition Details 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h1
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
                >
                  CustomResourceDefinition
                </h1>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            aria-busy="false"
            aria-live="polite"
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <dl
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
            >
              <dt
                class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
              >
                Name
              </dt>
              <dd
                class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
              >
                <span
                  class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                >
                  mydefinition.phonyresources.io
                </span>
              </dd>
              <dt
                class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
              >
                Creation
              </dt>
              <dd
                class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
              >
                <span
                  class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                >
                  2021-12-15T14:57:13.000Z
                </span>
              </dd>
              <dt
                class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
              >
                Group
              </dt>
              <dd
                class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
              >
                <span
                  class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                >
                  my.phonyresources.io
                </span>
              </dd>
              <dt
                class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
              >
                Version
              </dt>
              <dd
                class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
              >
                <span
                  class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                >
                  v1
                </span>
              </dd>
              <dt
                class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
              >
                Scope
              </dt>
              <dd
                class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
              >
                <span
                  class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                >
                  Namespaced
                </span>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Accepted Names
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
            >
              <table
                class="MuiTable-root makeStyles-table"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Plural
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Singular
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Kind
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      List Kind
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      mycustomresources
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      mycustomresource
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      MyCustomResource
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      MyCustomResourceList
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Versions
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
            >
              <table
                class="MuiTable-root makeStyles-table"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Served
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Storage
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      v1
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      false
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      false
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Conditions
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
                >
                  No data to be shown.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Objects
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
            >
              <table
                class="MuiTable-root makeStyles-table"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Name
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Namespace
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                      scope="col"
                      style="text-align: right;"
                    >
                      Age
                      <button
                        aria-label="sort up"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-link MuiTypography-colorPrimary"
                        href="/"
                      >
                        mycustomresource
                      </a>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      mynamespace
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                      style="text-align: right;"
                    >
                      <p
                        class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
                        title="2021-12-15T14:57:13.000Z"
                      >
                        3mo
                        <span />
                      </p>
                    </td>
                  </tr>
                  <tr
                    class="MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-link MuiTypography-colorPrimary"
                        href="/"
                      >
                        myotherresource
                      </a>
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      mynamespace
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                      style="text-align: right;"
                    >
                      <p
                        class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
                        title="2021-12-15T14:57:13.000Z"
                      >
                        3mo
                        <span />
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Events
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root makeStyles-box"
          >
            <div
              class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
            >
              <table
                class="MuiTable-root makeStyles-table"
              >
                <thead
                  class="MuiTableHead-root"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Type
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Reason
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      From
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Message
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                      scope="col"
                    >
                      Age
                      <button
                        aria-label="sort swap"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <span />
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </button>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root"
                >
                  <tr
                    class="MuiTableRow-root"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      Normal
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      Created
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      kubelet
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      Created
                    </td>
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                    >
                      <p
                        class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
                        title="2021-03-01T00:00:00.000Z"
                      >
                        3mo
                        <span />
                      </p>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots crd/CustomResourceDefinition List 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h1
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
          >
            Custom Resource Definitions
          </h1>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-label="Show filter"
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-label="Change columns displayed"
                    class="MuiButtonBase-root MuiIconButton-root"
                    tabindex="0"
                    title="Change columns displayed"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <span />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root makeStyles-box"
    >
      <div
        class="MuiPaper-root MuiTableContainer-root makeStyles-tableContainer MuiPaper-outlined MuiPaper-rounded"
      >
        <table
          class="MuiTable-root makeStyles-table"
        >
          <thead
            class="MuiTableHead-root"
          >
            <tr
              class="MuiTableRow-root MuiTableRow-head"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell MuiTableCell-sizeSmall"
                scope="col"
              >
                Name
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                scope="col"
              >
                Group
                <button
                  aria-label="sort swap"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <span />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                scope="col"
              >
                Scope
                <button
                  aria-label="sort swap"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <span />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                scope="col"
              >
                Full name
                <button
                  aria-label="sort swap"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <span />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </th>
              <th
                class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-sortCell MuiTableCell-sizeSmall"
                scope="col"
                style="text-align: right;"
              >
                Age
                <button
                  aria-label="sort up"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <span />
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </th>
            </tr>
          </thead>
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
              >
                <a
                  class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                  href="/"
                >
                  MyCustomResource
                </a>
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
              >
                my.phonyresources.io
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
              >
                Namespaced
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
              >
                mydefinition.phonyresources.io
              </td>
              <td
                class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeSmall"
                style="text-align: right;"
              >
                <p
                  class="MuiTypography-root makeStyles-noWrap MuiTypography-body1"
                  title="2021-12-15T14:57:13.000Z"
                >
                  3mo
                  <span />
                </p>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
